--- a/მონაცემთა_ბაზა.mw
+++ b/მონაცემთა_ბაზა.mw
@@ -1,1 +1,42 @@
 '''მონაცემთა ბაზა''' ელექტრონული ინფორმაციის მართვის სისტემაა. მისი მთავარი დანიშნულებაა ინფორმაციის დაცულად შენახვა და მომხმარებლისთვის სათანადო ფორმით მიწოდება. სისტემა შედგება ორი ნაწილისაგან: მონაცემთა ბაზის სამართავი პროგრამისა (DBMS - Database management system) და თვითონ ინფორმაციისგან. სამართავი პროგრამის დანიშნულებაა ინფორმაციის შენახვა, ორგანიზირება, მართვა და გადმოცემა.
+
+
+[[af:Databasis]]
+[[bs:Baza podataka]]
+[[ca:Base de dades]]
+[[cs:Databáze]]
+[[da:Database]]
+[[de:Datenbanksystem]]
+[[en:Database]]
+[[eo:Datumbazo]]
+[[es:Base de datos]]
+[[fa:دادگان]]
+[[fi:Tietokanta]]
+[[fr:Base de données]]
+[[gl:Base de datos]]
+[[he:בסיס נתונים]]
+[[hr:Baza podataka]]
+[[hu:Adatbázis]]
+[[ia:Base de datos]]
+[[id:Basis data]]
+[[is:Gagnagrunnur]]
+[[it:Database]]
+[[ja:データベース]]
+[[ko:데이터베이스]]
+[[lt:Duomenų bazė]]
+[[lv:Datu bāze]]
+[[ms:Pangkalan data]]
+[[nl:Database]]
+[[pl:Baza danych]]
+[[pt:Banco de dados]]
+[[ro:Bază de date]]
+[[ru:База данных]]
+[[sk:Databáza]]
+[[sl:Podatkovna baza]]
+[[sv:Databas]]
+[[th:ฐานข้อมูล]]
+[[tl:Database]]
+[[tr:Veri tabanı]]
+[[uk:База даних]]
+[[vi:Cơ sở dữ liệu]]
+[[zh:数据库]]
