*Empty MediaWiki Message*

--- a/ლოთარინგია.mw
+++ b/ლოთარინგია.mw
@@ -17,6 +17,7 @@
 [[es:Lorena (Francia)]]
 [[fi:Lothringen]]
 [[fr:Lorraine]]
+[[he:לוריין]]
 [[hu:Lotharingia]]
 [[it:Lorena (regione francese)]]
 [[ja:ロレーヌ地域圏]]
