*Empty MediaWiki Message*

--- a/თამარი_(გურჯი-ხათუნი).mw
+++ b/თამარი_(გურჯი-ხათუნი).mw
@@ -3,3 +3,4 @@
 [[1236]] მიათხოვეს [[რუმი|რუმის]] [[სულთანი|სულთან]] ყიას ედ-დინ ქეი ხუსრვე II-ს([[1236]]-[[1246]]).  თამარმა დიდი გავლენა მოიპოვა სულთნის კარზე. [[1236]] მოჭრილ [[ფული|ფულზე]] სულთანმა სიმბოლურად ამოატვიფრინა მისი სახე (მზე ლომის ზოდიაქოში). ასე შეიქმნა აღმოსავლეთში ცნობილი ემბლემა შირ-უ-ხირშიდ (ლომი და მზე), რომელიც შემდგომ სელჩუკის სხვა სულთნებბმაც გამოიყენეს და მოგვიანებით [[სპარსეთი|სპარსეთშიც]] დამკვიდრდა. 
 
 სულთნის გარდაცვალების შემდეგ ქვეყნის გამგებლობა ხელთ იგდო ვეზირმა მუინ ედ-დინ სულეიმან ფერვანამ და იმდროინდელი ტრადიციების მიხედვით სულთნის ქვრივი - გურჯი-ხათუნი ცოლად შეირთო. გურჯი-ხათუნი მეგობრობდა აღმოსავლეთის უდიდეს პოეტ [[რუმი ჯალალ ალ-დინ იბნ ბაჰა ალ-დინ|ჯალალ ალ-დინ რუმისთან]]. დედოფლის მცდელობით შეიქმნა რუმის პირველი პორტრეტი. მისივე უშუალო ხელმძღვანელობით აშენდა პოეტის მწვანე თურბეც ([[აკლდამა]]), რომელიც სელჩუკური არქიტექტურული მშვენებაა.
+[[en:Gürcü Hatun]]
