--- a/IBM_BlueGene%2FL.mw
+++ b/IBM_BlueGene%2FL.mw
@@ -14,3 +14,13 @@
 ==რესურსები ინტერნეტში==
 *[http://www.research.ibm.com/bluegene// IBM Research: Blue Gene]
 *[http://www.llnl.gov/asci/platforms/bluegenel/// Lawrence Livermore National Laboratory: BlueGene/L]
+
+[[de:BlueGene]]  	 
+[[en:Blue Gene]] 	 
+[[eo:BlueGene]] 	 
+[[fr:Blue Gene]] 	 
+[[id:Blue Gene]] 	 
+[[it:Blue Gene]] 	 
+[[ja:ブルージーン]] 	 
+[[nl:Blue Gene]] 	 
+[[sv:Blue Gene]]
