*Empty MediaWiki Message*

--- a/მონაცემთა_ბაზა.mw
+++ b/მონაცემთა_ბაზა.mw
@@ -1,5 +1,8 @@
 '''მონაცემთა ბაზა''' ელექტრონული ინფორმაციის მართვის სისტემაა. მისი მთავარი დანიშნულებაა ინფორმაციის დაცულად შენახვა და მომხმარებლისთვის სათანადო ფორმით მიწოდება. სისტემა შედგება ორი ნაწილისაგან: მონაცემთა ბაზის სამართავი პროგრამისა (DBMS - Database management system) და თვითონ ინფორმაციისგან. სამართავი პროგრამის დანიშნულებაა ინფორმაციის შენახვა, ორგანიზირება, მართვა და გადმოცემა.
 
+[[კატეგორია:მონაცემთა ბაზა]]
+{{ესკიზი}}    
+
 
 [[af:Databasis]]
 [[bs:Baza podataka]]
