*Empty MediaWiki Message*

--- a/IBM_BlueGene%2FL.mw
+++ b/IBM_BlueGene%2FL.mw
@@ -1,9 +1,9 @@
 [[სურათი:BlueGeneL-600x450.jpg|thumb|IBM BlueGene/L-ის ფოტო]]
-'''IBM BlueGene/L''' პირველი [[სუპერკომპიუტერი]] IBM BlueGene სერიიდან BlueGen/L დღეისათვის მსოფლიოს სუპერკომპიუტერებს უდგას სათავეში.იგი შემუშავებულია IBM-ისა და Lawrence Livermore National Laboratory-ის (LLNL) თანამშრომლობის შედეგად.
+'''IBM BlueGene/L''' პირველი [[სუპერკომპიუტერი]] IBM BlueGene სერიიდან BlueGen/L დღეისათვის მსოფლიოს სუპერკომპიუტერებს უდგას სათავეში. იგი შემუშავებულია IBM-ისა და Lawrence Livermore National Laboratory-ის (LLNL) თანამშრომლობის შედეგად.
 ==ისტორია==
-*2004 წლის 29 სექტემბერს IBM-მა ანონსირება გაუკეთა BlueGene/L-ის პროტოტიპს,რომლის სიჩქარემაც 36.01 ტერაფლოპს აღწევდა.
-*2005 წლის 27 ოქტომბერს სუპერკომპიუტერის მწარმოებლურობამ 280,6 ტერაფლოპს მიაღწია,რაც გამოწვეული იყო პროცესორების რიცხვობრივობის 131 072-მდე გაზრდით.
-*2005 წლის 14 ნოემბერს სიეტლში,SC05 Supercomputing Conference-მა IBM BlueGene/L საუკეთესოდ დაასახელა სუპერკომპიუტერებს შორის.მწარმოებლურობის რეკორდის დადგენა Linpack  benchmark-ის საშუალებით მოხდა,რომელიც თავის მხრივ ეტალონ ტესტადაა მიჩნეული ბოლო წლების განმავლობაში
+*[[2004]] წლის [[29 სექტემბერი|29 სექტემბერს]] IBM-მა ანონსირება გაუკეთა BlueGene/L-ის პროტოტიპს, რომლის სიჩქარემაც 36.01 ტერაფლოპს აღწევდა.
+*[[2005]] წლის 27 ოქტომბერს სუპერკომპიუტერის მწარმოებლურობამ 280,6 ტერაფლოპს მიაღწია, რაც გამოწვეული იყო [[პროცესორი|პროცესორების]] რიცხვობრივობის 131 072-მდე გაზრდით.
+*[[2005]] წლის 14 ნოემბერს [[სიეტლი|სიეტლში]], SC05 Supercomputing Conference-მა IBM BlueGene/L საუკეთესოდ დაასახელა სუპერკომპიუტერებს შორის. მწარმოებლურობის რეკორდის დადგენა Linpack  benchmark-ის საშუალებით მოხდა, რომელიც თავის მხრივ ეტალონ ტესტადაა მიჩნეული ბოლო წლების განმავლობაში
 
 ==სერიები==
 *BlueGene/C (მეორე სახელი Cyclops64)
