*Empty MediaWiki Message*

--- a/ფრანც_ბეკენბაუერი.mw
+++ b/ფრანც_ბეკენბაუერი.mw
@@ -1,8 +1,31 @@
 [[სურათი:FranzBeckenbauer-1.jpg|thumb|180px|"კაიზერი" ფრანცი]]
-'''ბეკენბაუერი, ფრანც''' ''([[გერმანული ენა|გერმ.]] Franz Beckenbauer - "Kaiser")'' (* [[11 სექტემბერი]] [[1945]], [[მიუნხენი]], [[გერმანია]]) - [[გერმანელები | გერმანელი]] სპორტსმენი და საზოგადო მოღვაწე, მსოფლიო ფეხბურთის ლეგენდა, მისი არისტოკრატული თამაშის სტილის გამო "იმპერატორად" ''([[გერმანული ენა | გერმ.]] "Kaiser")'' წოდებული.
+'''ბეკენბაუერი, ფრანც''' ''([[გერმანული ენა|გერმ.]] Franz Beckenbauer - "Kaiser")'' (* [[11 სექტემბერი]] [[1945]], [[მიუნხენი]], [[გერმანია]]) - [[გერმანელები | გერმანელი]] სპორტსმენი და საზოგადო მოღვაწე, მსოფლიო ფეხბურთის ლეგენდა, მისი არისტოკრატული თამაშის სტილის გამო "იმპერატორად" ''([[გერმანული ენა | გერმ.]] "Kaiser")'' წოდებული. დღეს არის გერმანიის საფეხბურთო კლუბ "ბაიერნის" პრიზიდენტი, 2006 წლის მსოფლიო საფეხბურთო ჩემპიონატის საორგანიზაციო კომიტეტის თავმჯდომარე და გერმანიის ფეხბურთის ფედერაციის ვიცეპრეზიდენტი.
 
 
-==ბიოგრაფია==
+== ბიოგრაფია ==
+
+=== სპორტული მიღწევები ===
+
+
+* [[მსოფლიო საფეხბურთო ჩემპიონატი]]ს ოქროს მედალი (1974 წ)
+* მსოფლიო საფეხბურთო ჩემპიონატის ვერცხლის მედალი (1966 წ)
+* მსოფლიო საფეხბურთო ჩემპიონატის ბრინჯაოს მედალი  (1972 წ)
+* [[ევროპის საფეხბურთო ჩემპიონატი]]ს ოქროს მედალი (1972 წ)
+* ევროპის საფეხბურთო ჩემპიონატის ვერცხლის მედალი (1976 წ)
+* ევრობის ჩემპიონთა თასი კლუბ "ბაიერნთან" ერთად (1974, 1975 და 1976 წწ)
+* [[უეფას თასი]]ს გათამაშების ვერცხლის მედალი "ჰამბურგთან" ერთად (1982)
+* [[ინტერკონტინენტალური თასი]] "ბაიერნთან" ერთად (1976 წ)
+* გერმანიის თასი "ბაიერნთან" ერთად  (1966, 1967, 1969 და 1971 წწ)
+* გერმანიის ჩემპიონი "ბაიერნთან" ერთად (1969, 1972, 1973, 1974 წწ) და "ჰამბურგთან" ერთად (1982 წ)
+* აშშ-ს ჩემპიონი კლუბ "კოსმოსთან" ერთად  (1977, 1978, 1980 წწ)
+
+===მიღწევები მწვრთნელის რანგში===
+* მსოფლიო ჩემპიონი (გერმანიის საფეხბურთო ნაკრები, 1990 წ)
+* მსოფლიო ვიცეჩემპიონი (გერმანიის საფეხბურთო ნაკრები, 1986 წ)
+* უეფას თასი ("ბაიერნი", 1996 წ)
+* გერმანიის ჩემპიონი ("ბაიერნი", 1994 წ)
+
+
 
 {{ესკიზი}}    
 
