*Empty MediaWiki Message*

--- a/ფრანც_ბეკენბაუერი.mw
+++ b/ფრანც_ბეკენბაუერი.mw
@@ -1,5 +1,5 @@
 [[სურათი:FranzBeckenbauer-1.jpg|thumb|180px|"კაიზერი" ფრანცი]]
-'''ბეკენბაუერი, ფრანც''' ''([[გერმანული ენა|გერმ.]] Franz Beckenbauer - "Kaiser")'' (* [[11 სექტემბერი]] [[1945]], [[მიუნხენი]], [[გერმანია]]) - [[გერმანელები | გერმანელი]] სპორტსმენი და საზოგადო მოღვაწე, მსოფლიო ფეხბურთის ლეგენდა, მისი არისტოკრატული თამაშის სტილის გამო "იმპერატორად" ''([[გერმანული ენა | გერმ.]] "Kaiser")'' წოდებული. დღეს არის გერმანიის საფეხბურთო კლუბ "ბაიერნის" პრიზიდენტი, 2006 წლის მსოფლიო საფეხბურთო ჩემპიონატის საორგანიზაციო კომიტეტის თავმჯდომარე და გერმანიის ფეხბურთის ფედერაციის ვიცეპრეზიდენტი.
+'''ბეკენბაუერი, ფრანც''' ''([[გერმანული ენა|გერმ.]] Franz Beckenbauer - "Kaiser")'' (* [[11 სექტემბერი]] [[1945]], [[მიუნხენი]], [[გერმანია]]) - [[გერმანელები | გერმანელი]] სპორტსმენი და საზოგადო მოღვაწე, მსოფლიო ფეხბურთის ლეგენდა, მისი არისტოკრატული თამაშის სტილის გამო "იმპერატორად" ''([[გერმანული ენა | გერმ.]] "Kaiser")'' წოდებული. დღეს არის გერმანიის საფეხბურთო კლუბ "ბაიერნის" პრეზიდენტი, [[2006]] წლის მსოფლიო საფეხბურთო ჩემპიონატის საორგანიზაციო კომიტეტის თავმჯდომარე და გერმანიის ფეხბურთის ფედერაციის ვიცეპრეზიდენტი.
 
 
 == ბიოგრაფია ==
@@ -7,28 +7,49 @@
 === სპორტული მიღწევები ===
 
 
-* [[მსოფლიო საფეხბურთო ჩემპიონატი]]ს ოქროს მედალი (1974 წ)
-* მსოფლიო საფეხბურთო ჩემპიონატის ვერცხლის მედალი (1966 წ)
-* მსოფლიო საფეხბურთო ჩემპიონატის ბრინჯაოს მედალი  (1972 წ)
-* [[ევროპის საფეხბურთო ჩემპიონატი]]ს ოქროს მედალი (1972 წ)
-* ევროპის საფეხბურთო ჩემპიონატის ვერცხლის მედალი (1976 წ)
-* ევრობის ჩემპიონთა თასი კლუბ "ბაიერნთან" ერთად (1974, 1975 და 1976 წწ)
-* [[უეფას თასი]]ს გათამაშების ვერცხლის მედალი "ჰამბურგთან" ერთად (1982)
-* [[ინტერკონტინენტალური თასი]] "ბაიერნთან" ერთად (1976 წ)
-* გერმანიის თასი "ბაიერნთან" ერთად  (1966, 1967, 1969 და 1971 წწ)
-* გერმანიის ჩემპიონი "ბაიერნთან" ერთად (1969, 1972, 1973, 1974 წწ) და "ჰამბურგთან" ერთად (1982 წ)
-* აშშ-ს ჩემპიონი კლუბ "კოსმოსთან" ერთად  (1977, 1978, 1980 წწ)
+* [[მსოფლიო საფეხბურთო ჩემპიონატი|მსოფლიო საფეხბურთო ჩემპიონატის]] ოქროს მედალი ([[1974]])
+* მსოფლიო საფეხბურთო ჩემპიონატის ვერცხლის მედალი ([[1966]])
+* მსოფლიო საფეხბურთო ჩემპიონატის ბრინჯაოს მედალი  ([[1972]])
+* [[ევროპის საფეხბურთო ჩემპიონატი|ევროპის საფეხბურთო ჩემპიონატის]] ოქროს მედალი ([[1972]])
+* ევროპის საფეხბურთო ჩემპიონატის ვერცხლის მედალი ([[1976]])
+* ევრობის ჩემპიონთა თასი კლუბ "ბაიერნთან" ერთად ([[1974]], [[1975]] და [[1976]])
+* [[უეფას თასი|უეფას თასის]] გათამაშების ვერცხლის მედალი "ჰამბურგთან" ერთად ([[1982]])
+* [[ინტერკონტინენტალური თასი]] "ბაიერნთან" ერთად ([[1976]])
+* გერმანიის თასი "ბაიერნთან" ერთად  ([[1966]], [[1967]], [[1969]] და [[1971]])
+* გერმანიის ჩემპიონი "ბაიერნთან" ერთად ([[1969]], [[1972]], [[1973]], [[1974]] წლები) და "ჰამბურგთან" ერთად ([[1982]])
+* აშშ-ს ჩემპიონი კლუბ "კოსმოსთან" ერთად  ([[1977]], [[1978]], [[1980]])
 
 ===მიღწევები მწვრთნელის რანგში===
-* მსოფლიო ჩემპიონი (გერმანიის საფეხბურთო ნაკრები, 1990 წ)
-* მსოფლიო ვიცეჩემპიონი (გერმანიის საფეხბურთო ნაკრები, 1986 წ)
-* უეფას თასი ("ბაიერნი", 1996 წ)
-* გერმანიის ჩემპიონი ("ბაიერნი", 1994 წ)
+* მსოფლიო ჩემპიონი (გერმანიის საფეხბურთო ნაკრები, [[1990]] წ.)
+* მსოფლიო ვიცეჩემპიონი (გერმანიის საფეხბურთო ნაკრები, [[1986]])
+* უეფას თასი ("ბაიერნი", [[1996]])
+* გერმანიის ჩემპიონი ("ბაიერნი", [[1994]])
 
 
 
 {{ესკიზი}}    
 
 [[კატეგორია:გერმანელები]]
-[[კატეგორია:სპორტსმენები]]
+[[კატეგორია:გერმანელი სპორტსმენები]]
 [[კატეგორია:დაბადებული 1945]]
+
+[[bg:Франц Бекенбауер]]
+[[cs:Franz Beckenbauer]]
+[[de:Franz Beckenbauer]]
+[[en:Franz Beckenbauer]]
+[[es:Franz Beckenbauer]]
+[[et:Franz Beckenbauer]]
+[[fi:Franz Beckenbauer]]
+[[fr:Franz Beckenbauer]]
+[[gl:Franz Beckenbauer]]
+[[he:פרנץ בקנבאואר]]
+[[hu:Franz Beckenbauer]]
+[[it:Franz Beckenbauer]]
+[[ja:フランツ・ベッケンバウアー]]
+[[nl:Franz Beckenbauer]]
+[[no:Franz Beckenbauer]]
+[[pl:Franz Beckenbauer]]
+[[pt:Franz Beckenbauer]]
+[[ru:Бекенбауэр, Франц]]
+[[sv:Franz Beckenbauer]]
+[[zh:贝肯鲍尔]]
