*Empty MediaWiki Message*

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -393,21 +393,17 @@
 
 ასე დაასრულა არსებობა მსოფლიოს ერთერთმა უდიდესმა იმპერიამ, რომელიც აერთიანებდა მთელს ხმელთაშუაზღვისპირეთს და დასავლეთ ევროპას. ჩაესვენა ერთერთი უდიდესი ცივილიზაცია და ევროპა გადავარდა ათასწლეულით უკან - ბნელ შუასაუკუნეებში.
 
-==წყაროები==
+==წყაროები და ბმულები==
 
 * პლუტარქოსი - შედარებითი ბიოგრაფიები
 * გაიუს სვეტონიუს ტრანკვილუსი - 12 კეისარის ცხოვრება
 * პუბლიუს კორნელიუს ტაციტუსი - ანლები
 * რომის იმპერიის ისტორია (მინსკი 2000)
+*http://www.resourcesforhistory.com/map.htm
+*http://www.roman-empire.net/
+*http://ancientrome.ru/
 
-==ბმულები==
-
-http://www.resourcesforhistory.com/map.htm
-
-http://www.roman-empire.net/
-
-http://ancientrome.ru/
-
+{{სტილი}}
 
 <center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
 
