/* წყაროები და ბმულები */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -395,13 +395,13 @@
 
 ==წყაროები და ბმულები==
 
-* პლუტარქოსი - შედარებითი ბიოგრაფიები
-* გაიუს სვეტონიუს ტრანკვილუსი - 12 კეისარის ცხოვრება
-* პუბლიუს კორნელიუს ტაციტუსი - ანლები
+* [[პლუტარქოსი]] - შედარებითი ბიოგრაფიები
+* [[გაიუს სვეტონიუს ტრანკვილუსი]] - 12 კეისარის ცხოვრება
+* [[პუბლიუს კორნელიუს ტაციტუსი]] - ანლები
 * რომის იმპერიის ისტორია (მინსკი 2000)
-*http://www.resourcesforhistory.com/map.htm
-*http://www.roman-empire.net/
-*http://ancientrome.ru/
+* http://www.resourcesforhistory.com/map.htm
+* http://www.roman-empire.net/
+* http://ancientrome.ru/
 
 {{სტილი}}
 
