*Empty MediaWiki Message*

--- a/ფრანც_ბეკენბაუერი.mw
+++ b/ფრანც_ბეკენბაუერი.mw
@@ -1,5 +1,8 @@
 [[სურათი:FranzBeckenbauer-1.jpg|thumb|180px|"კაიზერი" ფრანცი]]
-'''ბეკენბაუერი, ფრანც''' ''([[გერმანული ენა|გერმ.]] Franz Beckenbauer - "Kaiser")'' (* [[11 სექტემბერი]] [[1945]], [[მიუნხენი]], [[გერმანია]]) - [[გერმანელები | გერმანელი]] სპორტსმენი და საზოგადო მოღვაწე, მსოფლიო ფეხბურთის ლეგენდა, მისი არისტოკრატული თამაშის სტილის გამო "იმპერატორად" ''([[გერმანული ენა | გერმ.]] "Kaiser")'' წოდებული. დღეს არის გერმანიის საფეხბურთო კლუბ "ბაიერნის" პრეზიდენტი, [[2006]] წლის მსოფლიო საფეხბურთო ჩემპიონატის საორგანიზაციო კომიტეტის თავმჯდომარე და გერმანიის ფეხბურთის ფედერაციის ვიცეპრეზიდენტი.
+'''ბეკენბაუერი, ფრანც''' ''([[გერმანული ენა|გერმ.]] Franz Beckenbauer - "Kaiser")'' (* [[11 სექტემბერი]] [[1945]], [[მიუნხენი]], [[გერმანია]]) - [[გერმანელები | გერმანელი]] სპორტსმენი და საზოგადო მოღვაწე, მსოფლიო ფეხბურთის ლეგენდა, მისი არისტოკრატული თამაშის სტილის გამო "იმპერატორად" ''([[გერმანული ენა | გერმ.]] "Kaiser")'' წოდებული. 
+
+
+ამჟამად იგი არის გერმანიის საფეხბურთო კლუბ "ბაიერნის" პრეზიდენტი, [[2006]] წლის მსოფლიო საფეხბურთო ჩემპიონატის საორგანიზაციო კომიტეტის თავმჯდომარე და გერმანიის ფეხბურთის ფედერაციის ვიცეპრეზიდენტი.
 
 
 == ბიოგრაფია ==
