*Empty MediaWiki Message*

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -393,12 +393,14 @@
 
 ასე დაასრულა არსებობა მსოფლიოს ერთერთმა უდიდესმა იმპერიამ, რომელიც აერთიანებდა მთელს ხმელთაშუაზღვისპირეთს და დასავლეთ ევროპას. ჩაესვენა ერთერთი უდიდესი ცივილიზაცია და ევროპა გადავარდა ათასწლეულით უკან - ბნელ შუასაუკუნეებში.
 
-==წყაროები და ბმულები==
+==წყაროები==
 
 * [[პლუტარქოსი]] - შედარებითი ბიოგრაფიები
 * [[გაიუს სვეტონიუს ტრანკვილუსი]] - 12 კეისარის ცხოვრება
 * [[პუბლიუს კორნელიუს ტაციტუსი]] - ანლები
 * რომის იმპერიის ისტორია (მინსკი 2000)
+
+==რესურსები ინტერნეტში==
 * http://www.resourcesforhistory.com/map.htm
 * http://www.roman-empire.net/
 * http://ancientrome.ru/
