--- a/გერმანიის_პრეზიდენტების_სია.mw
+++ b/გერმანიის_პრეზიდენტების_სია.mw
@@ -1,4 +1,4 @@
-'''ბუნდესპრეზიდენტი''' (''[[გერმანული ენა|გერმ.]]:'' Bundespräsident) [[გერმანია|გერმანიის ფედერაციული რესპუბლიკის]] მეთაური და პირველი პირია. წარმოადგენს ქვეყანას საერთაშორისო ურთიერთობებში. მისი კომპეტენციის ფარგლებში შედის აგრეთვე საშინაო პოლიტიკის საკითხები: როგორიცაა ფორმალური მხარდაჭერა საკანონმდებლო აქტების მიღებისას; მთავრობების, მინისტრების, მოსამართლეების და სხვათა დანიშვნა; პრეროგატივა პარლამენტის დათხოვნის და ახალი არჩევნების დანიშვნის. აირჩევა 5 წლის ვადით  სპეციალურად მოწვეული ფედერალური კრების მიერ. 
+'''ბუნდესპრეზიდენტი''' (''[[გერმანული ენა|გერმ.]]:'' Bundespräsident) [[გერმანია|გერმანიის ფედერაციული რესპუბლიკის]] მეთაური და პირველი პირია, თუმცაღა ნაკლები პოლიტიკური გავლენა აქვს [[ბუნდესკანცლერი|ბუნდესკანცლერთან]] შედარებით. წარმოადგენს ქვეყანას საერთაშორისო ურთიერთობებში. მისი კომპეტენციის ფარგლებში შედის აგრეთვე საშინაო პოლიტიკის საკითხები: როგორიცაა ფორმალური მხარდაჭერა საკანონმდებლო აქტების მიღებისას; მთავრობების, მინისტრების, მოსამართლეების და სხვათა დანიშვნა; პრეროგატივა პარლამენტის დათხოვნის და ახალი არჩევნების დანიშვნის. აირჩევა 5 წლის ვადით  სპეციალურად მოწვეული ფედერალური კრების მიერ. 
 
 
 
