*Empty MediaWiki Message*

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -7,7 +7,7 @@
 
 
 ==შენიშვნები==
-* [[ენტ|1|წყარო]] სტატია დაწერილია [[პლუტარქოსი|პლუტარქოსის]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის მიხედვით.
+* [[ent|1|წყარო]] სტატია დაწერილია [[პლუტარქოსი|პლუტარქოსის]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის მიხედვით.
 
 {{ესკიზი}}
 
