*Empty MediaWiki Message*

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Campidoglio.JPG|thumb|მგელი, რომელმაც ჩვილი რომულუსი და რემუსი გამოკვება]]
-'''რომულუსი'''{{rf|1|წყარო}} (დ. [[ძვ.წ. 771]] -[[5 ივლისი]], დ. [[ძვ.წ. 717]])  და '''რემუსი''' (დ. [[ძვ.წ. 771]] - [[21 აპრილი]], დ. [[ძვ.წ. 753]]) ლეგენდის თანახმად რომის დამფუძნებლები იყვნენ და [[რომაული მითოლოგია|რომაულ მითოლოგიაში]] მოიხსენებიან ღვთისმსახური [[რეა სილვია|რეა სილვიას]] ტყუპ ვაჟებად, რომელიც მას ომის ღმერთი [[მარსი|მარსისგან]] ეყოლა. ლეგენდის მიხედვით, რომელიც [[პლუტარქი|პლუტარქმა]] და [[ლივი|ლივიმ]] ისტორიად მონათლეს, რომულუსი რომის პირველი მეფე იყო.
+'''რომულუსი''' (დ. [[ძვ.წ. 771]] -[[5 ივლისი]], დ. [[ძვ.წ. 717]])  და '''რემუსი''' (დ. [[ძვ.წ. 771]] - [[21 აპრილი]], დ. [[ძვ.წ. 753]]) ლეგენდის თანახმად რომის დამფუძნებლები იყვნენ და [[რომაული მითოლოგია|რომაულ მითოლოგიაში]] მოიხსენებიან ღვთისმსახური [[რეა სილვია|რეა სილვიას]] ტყუპ ვაჟებად, რომელიც მას ომის ღმერთი [[მარსი|მარსისგან]] ეყოლა. ლეგენდის მიხედვით, რომელიც [[პლუტარქი|პლუტარქმა]] და [[ლივი|ლივიმ]] ისტორიად მონათლეს, რომულუსი რომის პირველი მეფე იყო.
 
 რომულუსმა რემუსი მოკლა უთანხმოების გამო თუ რომელ მათგანს უჭერდნენ მხარს ადგილობრივი ღმერთები ქალაქის მმართველობისა და მისი სახელის მისაცემად. რომის დაფუძნების შემდეგ რომულუსმა არა მარტო შექმნა [[რომაული ლეგიონები]] და [[რომის სენატი]], მან ქალაქს ახალი მოქალაქეები შემატა მეზობელი საბინის ტომების ქალების მოტაცებით, რის შედეგადაც საბინელები და რომაელები ერთ ხალხში აირია.
 
@@ -7,7 +7,7 @@
 
 
 ==შენიშვნები==
-* {{ent|1|წყარო}} სტატია დაწერილია [[პლუტარქოსი|პლუტარქოსის]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის მიხედვით.
+* სტატია დაწერილია [[პლუტარქოსი|პლუტარქოსის]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის მიხედვით.
 
 {{ესკიზი}}
 
