*Empty MediaWiki Message*

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -1,6 +1,29 @@
 [[სურათი:Campidoglio.JPG|thumb|მგელი, რომელმაც ჩვილი რომულუსი და რემუსი გამოკვება]]
 '''რომულუსი''' (დ. [[ძვ.წ. 771]] -[[5 ივლისი]], დ. [[ძვ.წ. 717]])  და '''რემუსი''' (დ. [[ძვ.წ. 771]] - [[21 აპრილი]], დ. [[ძვ.წ. 753]]) 
 
+==რომის დაარსების შესახებ==
+
+{{ესკიზი}}
+
+==რომულუსის დაბადება და სიყმაწვილე==
+
+{{ესკიზი}}
+
+==რომის დაარსება==
+
+{{ესკიზი}}
+
+==საბინელებთან ომი==
+
+{{ესკიზი}}
+
+==საბინელებთან გაერთიანება და სხვა მეზობლებთან ომი==
+
+{{ესკიზი}}
+
+==მმართველობა და გარდაცვალება==
+
+{{ესკიზი}}
 
 ==შენიშვნები==
 * სტატია დაწერილია [[პლუტარქოსი|პლუტარქოსის]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის მიხედვით.
