/* რომულუსის დაბადება და სიყმაწვილე */

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -6,7 +6,7 @@
 {{ესკიზი}}
 
 ==რომულუსის დაბადება და სიყმაწვილე==
-
+[[სურათი:Romvlvs et Remvs.jpg|thumb|left|ჩვილი რომულუსი და რემუსი]]
 {{ესკიზი}}
 
 ==რომის დაარსება==
