--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -18,6 +18,8 @@
 
 {{ესკიზი}}
 
+[[სურათი:Jean_Auguste_Dominique_Ingres_019.jpg|thumb|გამარჯვებული რომულუსი]]
+
 ==საბინელებთან გაერთიანება და სხვა მეზობლებთან ომი==
 
 {{ესკიზი}}
