--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -18,7 +18,7 @@
 
 {{ესკიზი}}
 
-[[სურათი:Jean_Auguste_Dominique_Ingres_019.jpg|thumb|გამარჯვებული რომულუსი]]
+[[სურათი:Jean_Auguste_Dominique_Ingres_019.jpg|thumb|left|გამარჯვებული რომულუსი]]
 
 ==საბინელებთან გაერთიანება და სხვა მეზობლებთან ომი==
 
