/* რომის დაარსების შესახებ */

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -3,6 +3,7 @@
 
 ==რომის დაარსების შესახებ==
 
+როგორ დაერქვა რომს სახელი, რომელიც მთელმა მსოფლიომ იცის უცნობია, ერთერთი მოსაზრებით ქალაქი პელასგებმა დაარსეს და თავისი იარაღის სიძლიერის აღსანიშნავად დაარქვეს ქალაქს ეს სახელი (Rhōmē ბერძნულად ნიშნავს ძალას). სხვა მოსაზრებით [[ტროა|ტროას]] დაცემის შემდეგ ვინც გადარჩა და მოახერხა გემებზე დაჯდომა, გასცურეს ერუტრიისსკენ. ქალები ძალიან ცუდად იტანდნენ ცხოვრებას გემებში და ერთერთმა მათგანმა, ვინმე რომამ სხვა ქალები დაარწმუნა დაეწვათ გემები. ქმრები იძულებულნი გახდნენ ერტ ადგილას დასახლებულიყვნენ, ეს ადგილი [[პალანტიუმი]] იყო.
 {{ესკიზი}}
 
 ==რომულუსის დაბადება და სიყმაწვილე==
