--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -5,7 +5,7 @@
 
 როგორ დაერქვა რომს სახელი, რომელიც მთელმა მსოფლიომ იცის უცნობია, ერთერთი მოსაზრებით ქალაქი პელასგებმა დაარსეს და თავისი იარაღის სიძლიერის აღსანიშნავად დაარქვეს ქალაქს ეს სახელი (Rhōmē ბერძნულად ნიშნავს ძალას). სხვა მოსაზრებით [[ტროა|ტროას]] დაცემის შემდეგ ვინც გადარჩა და მოახერხა გემებზე დაჯდომა, გასცურეს ერუტრიისკენ. ქალები ძალიან ცუდად იტანდნენ ცხოვრებას გემებში და ერთერთმა მათგანმა, ვინმე რომამ სხვა ქალები დაარწმუნა დაეწვათ გემები. ქმრები იძულებულნი გახდნენ ერტ ადგილას დასახლებულიყვნენ, ეს ადგილი [[პალანტიუმი]] იყო. ახალ ადგილს ტრიანელი ლტოლვილები კარგად მოერგნენ, რომა მათ პატივით შეამკეს და მისი სახელი დაარქვეს ახლად დაარსებულ ქალაქს.
 
-არსებობს კიდევ მრავალი მოსაზრება, მაგრამ ანტიკური ავტორები და მათ შორის პლუტარქოსიც მიიჩნევდნენ რომ რომის დამაარსებელი რომულუსი იყო. თუ როგორ დაარსა რომულუსმა რომი, ამაზეც მრავალი მოსაზრება არსებობს. 
+არსებობს კიდევ მრავალი მოსაზრება, მაგრამ ანტიკური ავტორები და მათ შორის პლუტარქოსიც მიიჩნევდნენ რომ რომის დამაარსებელი რომულუსი იყო. რომულუსის წარმომავლობაზეც მრავალი მოსაზრება არსებობს. ზოგი მიიჩნევს რომ იგი [[ენეოსი|ენეოსის]] ვაჟი იყო და ძმასთან ერთად იტალიაში მოხვდა როდესაც პატარა ბავშვი იყო. სხვა მოსაზრებით იგი ენეოსის ქალიშვილის ვაჟი იყო, ხოლო მამამისი ომის ღმერთი [[არესი]] იყო. 
 
 {{ესკიზი}}
 
