/* რომულუსის დაბადება და სიყმაწვილე */

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -9,7 +9,8 @@
 
 ==რომულუსის დაბადება და სიყმაწვილე==
 [[სურათი:Romvlvs et Remvs.jpg|thumb|left|ჩვილი რომულუსი და რემუსი]]
-{{ესკიზი}}
+
+პლუტარქოსი რომულუსის დაბადების შემდეგ მონათხრობს მიიჩნევს სადოთ: [[ალბა|ალბაში]] მეფობდნენ ენეოსის ჩამომავლები ნუმიტორუსი და ამიტორუსი.
 
 ==რომის დაარსება==
 
