*Empty MediaWiki Message*

--- a/ალბა-ლონგა.mw
+++ b/ალბა-ლონგა.mw
@@ -1,1 +1,3 @@
 ძველი ქალაქი ლაციუმში. დაარსა [[ენეოსი|ენეოსის]] ვაჟმა ასკანიუსმა. ნუმიტორუსი და ამულიუსი მისი ჩამომავლები იყვნენ მეცამეტე თაობაში.
+
+[[კატეგორია:ძველი_რომი]]
