/* რომულუსის დაბადება და სიყმაწვილე */

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -10,7 +10,7 @@
 ==რომულუსის დაბადება და სიყმაწვილე==
 [[სურათი:Romvlvs et Remvs.jpg|thumb|left|ჩვილი რომულუსი და რემუსი]]
 
-პლუტარქოსი რომულუსის დაბადების შემდეგ მონათხრობს მიიჩნევს სადოთ: [[ალბა|ალბაში]] მეფობდნენ ენეოსის ჩამომავლები ნუმიტორუსი და ამიტორუსი.
+პლუტარქოსი რომულუსის დაბადების შემდეგ მონათხრობს მიიჩნევს სადოთ: [[ალბა|ალბაში]] მეფობდნენ ენეოსის ჩამომავლები ნუმიტორუსი და ამიტორუსი. ამიტორუსმა ხელში ჩაიგდო ძმის ტახტხი და რათა მის ძმისშვილს არ ჰყოლოდა შვილები, დანიშნა იგი ქალღმერთ [[ვესტა|ვესტას]] ქურუმად.
 
 ==რომის დაარსება==
 
